apps/docs/content/docs/orm/v6/prisma-migrate/workflows/unsupported-database-features.mdx
---
title: Unsupported database features (Prisma Migrate)
description: How to include unsupported database features for projects that use Prisma Migrate.
url: /orm/v6/prisma-migrate/workflows/unsupported-database-features
metaTitle: 'Prisma Migrate: Unsupported database features'
metaDescription: How to include unsupported database features for projects that use Prisma Migrate.
---

Prisma Migrate uses the Prisma schema to determine what features to create in the database. However, some database features [cannot be represented in the Prisma schema](/orm/v6/prisma-schema/data-model/unsupported-database-features) , including but not limited to:

- Stored procedures
- Triggers
- Views
- Partial indexes

To add an unsupported feature to your database, you must [customize a migration](/orm/v6/prisma-migrate/workflows/customizing-migrations) to include that feature before you apply it.

:::tip

The Prisma schema is able to represent [unsupported field types](/orm/v6/prisma-schema/data-model/unsupported-database-features#unsupported-field-types) and [native database functions](/orm/v6/prisma-migrate/workflows/native-database-functions).

:::

:::warning

This guide **does not apply for MongoDB**.<br />
Instead of `migrate dev`, [`db push`](/orm/v6/prisma-migrate/workflows/prototyping-your-schema) is used for [MongoDB](/orm/v6/overview/databases/mongodb).

:::

## Customize a migration to include an unsupported feature

To customize a migration to include an unsupported feature:

1. Use the `--create-only` flag to generate a new migration without applying it:

   ```npm
   npx prisma migrate dev --create-only
   ```

1. Open the generated `migration.sql` file and add the unsupported feature - for example, a partial index:

   ```sql
   CREATE UNIQUE INDEX tests_success_constraint
     ON posts (subject, target)
     WHERE success;
   ```

1. Apply the migration:

   ```npm
   npx prisma migrate dev
   ```

1. Commit the modified migration to source control.
